fix menu on mobile

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -77,6 +77,13 @@ nav {
     gap: 1rem;
     padding: 1rem;
 
+    @media screen and (max-width: 960px) {
+        justify-content: space-between;
+        font-size: 1.25rem;
+        gap: 0;
+        padding-inline: 0;
+    }
+
     .current {
         color: hsl(0 0% 10%);
         pointer-events: none;
